--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "davejamesmiller/laravel-breadcrumbs": "^5.3",
         "fideloper/proxy": "^4.0",
+        "laracasts/flash": "^3.2",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1"
@@ -38,6 +39,10 @@
             "Tests\\": "tests/"
         }
     },
+    "files": [
+        "app/helpers.php",
+        "app/Support/Helpers/common.php"
+    ],
     "extra": {
         "laravel": {
             "dont-discover": []
