--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 		"php": "^7.1.3",
 		"davejamesmiller/laravel-breadcrumbs": "^5.3",
 		"fideloper/proxy": "^4.0",
-		"kalnoy/nestedset": "4.3",
+		"guzzlehttp/guzzle": "^6.5",
+		"kalnoy/nestedset": "^4.3",
 		"laracasts/flash": "^3.2",
 		"laravel/framework": "5.6.*",
 		"laravel/tinker": "^1.0",
