--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
 		"php": "^7.1.3",
 		"davejamesmiller/laravel-breadcrumbs": "^5.3",
 		"fideloper/proxy": "^4.0",
+		"elasticsearch/elasticsearch": "^6.0",
 		"guzzlehttp/guzzle": "^6.5",
 		"kalnoy/nestedset": "^4.3",
 		"laracasts/flash": "^3.2",
