--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,14 @@
 	"require": {
 		"php": "^7.1.3",
 		"davejamesmiller/laravel-breadcrumbs": "^5.3",
-		"fideloper/proxy": "^4.0",
+		"doctrine/dbal": "^2.13",
 		"elasticsearch/elasticsearch": "^6.0",
+		"fideloper/proxy": "^4.0",
 		"guzzlehttp/guzzle": "^6.5",
 		"kalnoy/nestedset": "^4.3",
 		"laracasts/flash": "^3.2",
 		"laravel/framework": "5.6.*",
+		"laravel/socialite": "*",
 		"laravel/tinker": "^1.0",
 		"predis/predis": "^1.1"
 	},
