Added API with Swagger

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
 		"kalnoy/nestedset": "^4.3",
 		"laracasts/flash": "^3.2",
 		"laravel/framework": "5.6.*",
+		"laravel/passport": "*",
 		"laravel/socialite": "*",
 		"laravel/tinker": "^1.0",
 		"predis/predis": "^1.1"
@@ -28,7 +29,8 @@
 		"fzaninotto/faker": "^1.4",
 		"mockery/mockery": "^1.0",
 		"nunomaduro/collision": "^2.0",
-		"phpunit/phpunit": "^7.0"
+		"phpunit/phpunit": "^7.0",
+		"zircote/swagger-php": "^2.0"
 	},
 	"autoload": {
 		"classmap": [
