--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
 		"doctrine/dbal": "^2.13",
 		"elasticsearch/elasticsearch": "^6.0",
 		"fideloper/proxy": "^4.0",
+		"mews/purifier": "^2.1",
 		"guzzlehttp/guzzle": "^6.5",
 		"kalnoy/nestedset": "^4.3",
 		"laracasts/flash": "^3.2",
